clean up fix spacing

--- a/components/body/index.styl
+++ b/components/body/index.styl
@@ -22,6 +22,7 @@
     display none
     line-height 2
     font-size 16px
+    margin-bottom 60px
     .body-img
       width 100%
       margin-bottom 40px
@@ -29,8 +30,6 @@
       height 65vw
       background-size cover
       background-position center center
-    &:not(#ios .body-section-content)
-      margin-bottom 60px
 
   .vertical-rectangle
     width 100%
@@ -84,10 +83,11 @@
     width 100%
     margin-bottom 40px
 
-  .avant-garde-button-black
+  .avant-garde-button-black:visited
+    color #fff
+
+  #partnerships .avant-garde-button-black
     margin-bottom 40px
-    &:visited
-      color #fff
 
   .mailto-partners
     margin-bottom 0px
